--- a/web_ui/templates/index.html
+++ b/web_ui/templates/index.html
@@ -108,9 +108,16 @@
                 for (var child of parent.children) {
                     let playerId = child.id;
                     let playerHand = state["playerHands"][playerId];
-                    p = document.getElementById("hand" + playerId)
+                    let handDiv = document.getElementById("hand" + playerId)
                     // Set the text content of the paragraph to the player's hand array
-                    p.innerText ="Hand: " + playerHand.join();
+
+                    handDiv.replaceChildren()
+                    for (const card of playerHand) {
+                        let img = document.createElement("img")
+                        img.src = imgLinks[card]
+                        img.classList.add("cardInHand")
+                        handDiv.appendChild(img)
+                    }
                 }
             }
 
@@ -203,35 +210,30 @@
 </span>
 <div id="parent">
     <div id="1">
-        <h1>p1</h1>
-        <div>
-            <p id="hand1"></p>
-        </div>
+    <h1>p1</h1>
+    <div id="hand1">
     </div>
-    <div id="2">
-        <h1>p2</h1>
-        <div>
-            <p id="hand2"></p>
-        </div>
+</div>
+<div id="2">
+    <h1>p2</h1>
+    <div id="hand2">
     </div>
-    <div id="3">
-        <h1>p3</h1>
-        <div>
-            <p id="hand3"></p>
-        </div>
+</div>
+<div id="3">
+    <h1>p3</h1>
+    <div id="hand3">
     </div>
-    <div id="4">
-        <h1>p4</h1>
-        <div>
-            <p id="hand4"></p>
-        </div>
+</div>
+<div id="4">
+    <h1>p4</h1>
+    <div id="hand4">
     </div>
-    <div id="5">
-        <h1>p5</h1>
-        <div>
-            <p id="hand5"></p>
-        </div>
+</div>
+<div id="5">
+    <h1>p5</h1>
+    <div id="hand5">
     </div>
+</div>
     <img src="" id="discardImg">
 </div>
 
