--- a/web_ui/templates/index.html
+++ b/web_ui/templates/index.html
@@ -21,7 +21,7 @@
             discardElement = document.getElementById("discardImg")
             var socket = io();
             var state;
-            socket.emit("test", "connection made!")
+            socket.emit("test", "socket connected!")
 
            var imgLinks = {
                 // Spades
