discard now works, issue with logical operator, started work on hiddenui agent implementation

--- a/web_ui/static/hiddenUI.css
+++ b/web_ui/static/hiddenUI.css
@@ -51,3 +51,10 @@ body{
     width: fit-content;
     height: fit-content;
 }
+
+#requests{
+    background-color: beige;
+    width: 100px;
+    height: 200px;
+
+}
